--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -39,33 +39,33 @@
     <h2>Steps</h2>
     <h3>Prep work</h3>
     <ol>
-        <li>Combine the cheese filling ingredients in a medium bowl and set aside. Measure out remaining ingredients</li>
+        <li><strong>Combine the cheese filling ingredients</strong> in a medium bowl and set aside. Measure out remaining ingredients</li>
     </ol>
     <h3>Make the Meat Sauce</h3>
     <ol>
-        <li>Heat olive oil over medium heat and add the diced onions. Let them soften for 10 minutes. (This allows them to release a little sugar which is a nice offset to the acidity of the tomatoes.)</li>
-        <li>Add the ground beef and sausage and increase heat to medium-high. Use a spatula to break up the meat so that it’s very fine and crumbled. Cook for 8-10 minutes, or until cooked through. Add garlic during the last minute. Drain excess grease.</li>
-        <li>Add the chicken broth and use a silicone spatula to “clean” the bottom and sides of the pot. Add the marinara sauce, tomato paste, hot sauce, and Worcestershire sauce. Bring to a boil, then reduce to a simmer. Cover partially and let the sauce simmer gently.</li>
+        <li><strong>Heat olive oil</strong> over medium heat and <strong>add the diced onions</strong>. Let them soften for 10 minutes. (This allows them to release a little sugar which is a nice offset to the acidity of the tomatoes.)</li>
+        <li></strong>Add the ground beef and sausage</strong> and increase heat to medium-high. Use a spatula to break up the meat so that it’s very fine and crumbled. Cook for 8-10 minutes, or until cooked through. <strong>Add garlic</strong> during the last minute. Drain excess grease.</li>
+        <li><strong>Add the chicken broth</strong> and use a silicone spatula to “clean” the bottom and sides of the pot. <strong>Add the marinara sauce, tomato paste, hot sauce, and Worcestershire sauce</strong>. Bring to a boil, then reduce to a simmer. Cover partially and let the sauce simmer gently.</li>
     </ol>
     <h3>Preheat Oven and Cook the Lasagna Noodles</h3>
     <ol>
         <li>Preheat oven to 375°.</li>
-        <li>Begin boiling a large pot of salted pasta water for the lasagna noodles. Once a rapid boil is reached, cook the noodles to al dente according to package instructions. (Set a timer to ensure you don’t overcook them.) Gently stir with a wooden spoon throughout cooking to prevent the noodles from sticking. Drain and rinse with cold water until noodles are completely cool.</li>
+        <li><strong>Begin boiling a large pot of salted pasta water</strong> for the lasagna noodles. Once a rapid boil is reached, <strong>cook the noodles to al dente</strong> according to package instructions. (Set a timer to ensure you don’t overcook them.) Gently stir with a wooden spoon throughout cooking to prevent the noodles from sticking. <strong>Drain and rinse with cold water</strong> until noodles are completely cool.</li>
+        <li>Lay the cooled noodles flat on wax or parchment paper while you begin assembling the lasagna.</li>
     </ol>
     <h3>Assemble</h3>
     <ol>
-        <li>Lay the cooled noodles flat on wax or parchment paper while you begin assembling the lasagna.</li>
-        <li>Spread 1 heaping cup of meat sauce on the bottom of a 9 x 13-inch casserole dish. Next, add 4 lasagna noodles, overlapping them if needed.</li>
-        <li>Spread 1/3 of the ricotta cheese mixture over the noodles, followed by about 1 ½ cups of meat sauce.</li>
-        <li>Top with 4 more lasagna noodles, 1/3 of the ricotta cheese mixture, 1 ½ cups meat sauce.</li>
-        <li>Finish with 4 more lasagna noodles, the rest of the ricotta mixture, and the rest of the meat sauce.</li>
-        <li>Top with 2 ½ cups of Mozzarella cheese.</li>
-        <li>Spray foil with nonstick cooking spray and place it spray-side-down on top of the baking dish to prevent the cheese from sticking to it.</li>
+        <li><strong>Spread 1 heaping cup of meat sauce</strong> on the bottom of a 9 x 13-inch casserole dish. Next, add 4 lasagna noodles, overlapping them if needed.</li>
+        <li><strong>Spread 1/3 of the ricotta cheese mixture</strong> over the noodles, followed by about 1 ½ cups of meat sauce.</li>
+        <li>Top with <strong>4 more lasagna noodles, 1/3 of the ricotta cheese mixture, 1 ½ cups meat sauce.</li>
+        <li>Finish with <strong>4 more lasagna noodles, the rest of the ricotta mixture</strong>, and <strong>the rest of the meat sauce</strong>.</li>
+        <li><strong>Top with 2 ½ cups of Mozzarella cheese</strong>.</li>
+        <li><strong>Spray foil with nonstick cooking spray</strong> and place it spray-side-down on top of the baking dish to prevent the cheese from sticking to it.</li>
     </ol>
     <h3>Bake</h3>
     <ol>
-        <li>Bake for 35 minutes. Remove cover and bake for 10 more minutes.</li>
-        <li>Remove and garnish with fresh parsley. Let it sit for 15 minutes prior to serving to allow the layers to set. Serve with garlic bread with cheese.</li>
+        <li>Bake for 35 minutes. Remove cover and <strong>bake for 10 more minutes</strong>.</li>
+        <li>Remove and garnish with fresh parsley. <strong>Let it sit for 15 minutes prior to serving</strong> to allow the layers to set. Serve with garlic bread with cheese.</li>
     </ol>
     <br>
     <a href="../index.html">Back to main page</a>
