--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -55,7 +55,7 @@
     </ol>
     <h3>Assemble</h3>
     <ol>
-        <li><strong>Spread 1 heaping cup of meat sauce</strong> on the bottom of a 9 x 13-inch casserole dish. Next, add 4 lasagna noodles, overlapping them if needed.</li>
+        <li><strong>Spread 1 heaping cup of meat sauce</strong> on the bottom of a 9 x 13-inch casserole dish. Next, <strong>add 4 lasagna noodles</strong>, overlapping them if needed.</li>
         <li><strong>Spread 1/3 of the ricotta cheese mixture</strong> over the noodles, followed by about 1 ½ cups of meat sauce.</li>
         <li>Top with <strong>4 more lasagna noodles, 1/3 of the ricotta cheese mixture, 1 ½ cups meat sauce.</li>
         <li>Finish with <strong>4 more lasagna noodles, the rest of the ricotta mixture</strong>, and <strong>the rest of the meat sauce</strong>.</li>
