feat: Add recipe (Baked potato slices)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/baked-potato-slices.html">Baked potato slices</a>
     <a href="./recipes/lasagna.html">Lasagna</a>
     <a href="./recipes/ramen.html">Ramen</a>
 </body>
