feat: Add recipe (Olive garden salad)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/baked-potato-slices.html">Baked potato slices</a>
     <a href="./recipes/lasagna.html">Lasagna</a>
+    <a href="./recipes/olive-garden-salad.html">Olive garden salad</a>
     <a href="./recipes/ramen.html">Ramen</a>
 </body>
 </html>
