fix: Add list to recipe links as line-break

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/baked-potato-slices.html">Baked potato slices</a>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/olive-garden-salad.html">Olive garden salad</a>
-    <a href="./recipes/ramen.html">Ramen</a>
+    <ul>
+        <li><a href="./recipes/baked-potato-slices.html">Baked potato slices</a></li>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/olive-garden-salad.html">Olive garden salad</a></li>
+        <li><a href="./recipes/ramen.html">Ramen</a></li>
+    </ul>
+    
 </body>
 </html>
