--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -57,7 +57,7 @@
     <ol>
         <li><strong>Spread 1 heaping cup of meat sauce</strong> on the bottom of a 9 x 13-inch casserole dish. Next, <strong>add 4 lasagna noodles</strong>, overlapping them if needed.</li>
         <li><strong>Spread 1/3 of the ricotta cheese mixture</strong> over the noodles, followed by about 1 ½ cups of meat sauce.</li>
-        <li>Top with <strong>4 more lasagna noodles, 1/3 of the ricotta cheese mixture, 1 ½ cups meat sauce.</li>
+        <li>Top with <strong>4 more lasagna noodles, 1/3 of the ricotta cheese mixture, 1 ½ cups meat sauce</strong>.</li>
         <li>Finish with <strong>4 more lasagna noodles, the rest of the ricotta mixture</strong>, and <strong>the rest of the meat sauce</strong>.</li>
         <li><strong>Top with 2 ½ cups of Mozzarella cheese</strong>.</li>
         <li><strong>Spray foil with nonstick cooking spray</strong> and place it spray-side-down on top of the baking dish to prevent the cheese from sticking to it.</li>
