feat: Add credits

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <li><a href="./recipes/olive-garden-salad.html">Olive garden salad</a></li>
         <li><a href="./recipes/ramen.html">Ramen</a></li>
     </ul>
+    <h2>Credits</h2>
+    <p>This project is part of <em><a href="https://www.theodinproject.com/paths/foundations/courses/foundations">The Odin Project - Foundations</a></em> course.</p>
+    <span>I'm not the owner of the <a href="https://thecozycook.com/easy-lasagna-recipe/">original recipe. </a>. This website is for educational purpose only.</span>
     
+    <h2>Navigation</h2>
 </body>
 </html>
