--- a/recipes/baked-potato-slices.html
+++ b/recipes/baked-potato-slices.html
@@ -29,6 +29,11 @@
         <li>Remove the slices from the oven. Sprinkle with Italian seasoning, then top with green onions. Serve with sour cream and enjoy!</li>
     </ol>
     <br>
+    <h2>Credits</h2>
+    <p>This project is part of <em><a href="https://www.theodinproject.com/paths/foundations/courses/foundations">The Odin Project - Foundations</a></em> course.</p>
+    <span>I'm not the owner of the <a href="https://thecozycook.com/baked-potato-slices/">original recipe. </a>. This website is for educational purpose only.</span>
+    
+    <h2>Navigation</h2>
     <a href="../index.html">Back to main page</a>
 </body>
 </html>
