--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -68,6 +68,11 @@
         <li>Remove and garnish with fresh parsley. <strong>Let it sit for 15 minutes prior to serving</strong> to allow the layers to set. Serve with garlic bread with cheese.</li>
     </ol>
     <br>
+    <h2>Credits</h2>
+    <p>This project is part of <em><a href="https://www.theodinproject.com/paths/foundations/courses/foundations">The Odin Project - Foundations</a></em> course.</p>
+    <span>I'm not the owner of the <a href="https://thecozycook.com/easy-lasagna-recipe/">original recipe. </a>. This website is for educational purpose only.</span>
+    
+    <h2>Navigation</h2>
     <a href="../index.html">Back to main page</a>
 </body>
 </html>
