--- a/recipes/olive-garden-salad.html
+++ b/recipes/olive-garden-salad.html
@@ -41,6 +41,11 @@
         <li><strong>Drizzle with desired amount of salad dressing</strong> and toss to combine. (You won't need all of the dressing.) <strong>Sprinkle with croutons and Parmesan cheese</strong> and serve!</li>
     </ol>
     <br>
+    <h2>Credits</h2>
+    <p>This project is part of <em><a href="https://www.theodinproject.com/paths/foundations/courses/foundations">The Odin Project - Foundations</a></em> course.</p>
+    <span>I'm not the owner of the <a href="https://thecozycook.com/easy-lasagna-recipe/">original recipe. </a>. This website is for educational purpose only.</span>
+    
+    <h2>Navigation</h2>
     <a href="../index.html">Back to main page</a>
 </body>
 </html>
