fix: Typo in Credits

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -57,7 +57,7 @@
     <br>
     <h2>Credits</h2>
     <p>This project is part of <em><a href="https://www.theodinproject.com/paths/foundations/courses/foundations">The Odin Project - Foundations</a></em> course.</p>
-    <span>I'm not the owner of the <a href="https://thecozycook.com/easy-lasagna-recipe/">original recipe. </a>. This website is for educational purpose only.</span>
+    <span>I'm not the owner of the <a href="https://thecozycook.com/easy-lasagna-recipe/">original recipe</a>. This website is for educational purpose only.</span>
     
     <h2>Navigation</h2>
     <a href="../index.html">Back to main page</a>
