feat: Add 'navigate to top'

--- a/recipes/olive-garden-salad.html
+++ b/recipes/olive-garden-salad.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recipe name</title>
+    <title>Olive garden salad</title>
 </head>
 <body>
-    <h1>Dish name</h1>
+    <h1 id="top">Olive garden salad</h1>
     <img src="" alt="">
     <h2>Ingredients</h2>
     <h3>Salad</h3>
@@ -46,6 +46,6 @@
     <span>I'm not the owner of the <a href="https://thecozycook.com/easy-lasagna-recipe/">original recipe</a>. This website is for educational purpose only.</span>
     
     <h2>Navigation</h2>
-    <a href="../index.html">Back to main page</a>
+    <span>Back to: <a href="#top">Main page</a> | <a href="../index.html">Main page</a></span>
 </body>
 </html>
