--- a/recipes/_template.html
+++ b/recipes/_template.html
@@ -5,7 +5,7 @@
     <title>Recipe name</title>
 </head>
 <body>
-    <h1>Dish name</h1>
+    <h1 id="top">Dish name</h1>
     <img src="" alt="">
     <h2>Ingredients</h2>
     <!-- <h3>Sub heading</h3> -->
@@ -22,6 +22,6 @@
     <span>I'm not the owner of the <a href="">original recipe</a>. This website is for educational purpose only.</span>
     
     <h2>Navigation</h2>
-    <a href="../index.html">Back to main page</a>
+    <span>Back to: <a href="#top">Main page</a> | <a href="../index.html">Main page</a></span>
 </body>
 </html>
