fix: Typo in page navigation

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -73,6 +73,6 @@
     <span>I'm not the owner of the <a href="https://thecozycook.com/easy-lasagna-recipe/">original recipe</a>. This website is for educational purpose only.</span>
     
     <h2>Navigation</h2>
-    <span>Back to: <a href="#top">Main page</a> | <a href="../index.html">Main page</a></span>
+    <span>Back to: <a href="#top">Top</a> | <a href="../index.html">Main page</a></span>
 </body>
 </html>
